--- a/.github/workflows/docker-unified.yml
+++ b/.github/workflows/docker-unified.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Check whether publishing enabled
         id: publish
         env:
-          ENABLE_PUBLISH: ${{ secrets.DOCKER_PASSWORD }}
+          ENABLE_PUBLISH: ${{ secrets.ORG_DOCKER_PASSWORD }}
         run: |
           echo "Enable publish: ${{ env.ENABLE_PUBLISH != '' }}"
           echo "::set-output name=publish::${{ env.ENABLE_PUBLISH != '' }}"
@@ -106,7 +106,7 @@ jobs:
         if: ${{ needs.setup.outputs.publish == 'true' }}
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.ORG_DOCKER_PASSWORD }}
       - name: Build and Push MultiPlatform image
         uses: docker/build-push-action@v2
         if: ${{ needs.setup.outputs.publish == 'true' }}
@@ -182,7 +182,7 @@ jobs:
         if: ${{ needs.setup.outputs.publish == 'true' }}
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.ORG_DOCKER_PASSWORD }}
       - name: Build and Push Platform image
         uses: docker/build-push-action@v2
         if: ${{ needs.setup.outputs.publish == 'true' }}
@@ -258,7 +258,7 @@ jobs:
         if: ${{ needs.setup.outputs.publish == 'true' }}
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.ORG_DOCKER_PASSWORD }}
       - name: Build and Push Platform image
         uses: docker/build-push-action@v2
         if: ${{ needs.setup.outputs.publish == 'true' }}
@@ -410,7 +410,7 @@ jobs:
         if: ${{ needs.setup.outputs.publish == 'true' }}
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.ORG_DOCKER_PASSWORD }}
       - name: Build and Push MultiPlatform image
         uses: docker/build-push-action@v2
         if: ${{ needs.setup.outputs.publish == 'true' }}
@@ -486,7 +486,7 @@ jobs:
         if: ${{ needs.setup.outputs.publish == 'true' }}
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.ORG_DOCKER_PASSWORD }}
       - name: Build and Push MultiPlatform image
         uses: docker/build-push-action@v2
         if: ${{ needs.setup.outputs.publish == 'true' }}
@@ -602,7 +602,7 @@ jobs:
         if: ${{ needs.setup.outputs.publish == 'true' }}
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.ORG_DOCKER_PASSWORD }}
       - name: Build and Push MultiPlatform image
         uses: docker/build-push-action@v2
         if: ${{ needs.setup.outputs.publish == 'true' }}
