--- a/.github/workflows/metadata-io.yml
+++ b/.github/workflows/metadata-io.yml
@@ -59,9 +59,7 @@ jobs:
           account: ${{ secrets.BUILDPULSE_ACCOUNT }}
           repository: ${{ secrets.BUILDPULSE_REPO }}
           path: |
-            **/build/reports/tests/test/**
-            **/build/test-results/test/**
-            **/junit.*.xml
+            **/junit*.xml
           key: ${{ secrets.BUILDPULSE_ACCESS_KEY_ID }}
           secret: ${{ secrets.BUILDPULSE_SECRET_ACCESS_KEY }}
       - name: Ensure codegen is updated
