--- a/.github/workflows/publish-airflow-plugin-pypi-release.yml
+++ b/.github/workflows/publish-airflow-plugin-pypi-release.yml
@@ -41,6 +41,7 @@ jobs:
       env:
         TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
+        RELEASE_SKIP_TEST: "true"
       run: |
         cd metadata-ingestion-modules/airflow-plugin
         RELEASE_VERSION=${{ needs.setup.outputs.tag }} ./scripts/release.sh
